tests/ui/fail/functions/l10n/fr/settings.ftl
number = { NUMBER() }
time = time
day = { DAY() }
